[tool.poetry]
name = "asciinator"
version = "0.1.0"
description = "A CLI tool to convert images and GIFs to ASCII art."
authors = ["Alvaro Frias Garay <alvarofriasgaray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.1.0"
numpy = "^1.26.2"

[tool.poetry.scripts]
asciinator = "asciinator.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
